ADD : Home - ListBox + bouton pour choix de l'arène MOD : Editeur - Ne récupère plus le libellé de l'arène

--- a/WordArena/android/assets/i18n/WordArena.properties
+++ b/WordArena/android/assets/i18n/WordArena.properties
@@ -20,6 +20,7 @@ example.collectedCoins=You collected {0,choice,0#no coins|1#one coin|1<{0,number
 
 # User Interface
 # Home screen
+ui.home.play=Play
 ui.home.editor=Editor
 ui.home.options=Options
 ui.home.quit=Quit
@@ -71,7 +72,8 @@ ui.editor.player.4=Player 4
 # Arena names
 arena.unnamed=Unnamed Arena
 arena.0_first_assault=First assault
-arena.1_ivory_tower=Ivory Tower
-arena.2_trench_warfare= Trench Warfare
+arena.1_ivory_tower=Ivory tower
+arena.2_trench_warfare= Trench warfare
 arena.3_diamond=Diamond
 arena.4_battlefield=Battlefield
+arena.5_glass_nightmare=Glass nightmare
