--- a/WordArena/android/assets/i18n/WordArena_fr.properties
+++ b/WordArena/android/assets/i18n/WordArena_fr.properties
@@ -1,6 +1,7 @@
 # This is the french WordArena i18n bundle
 
 # User Interface
+ui.home.play=Jouer
 ui.home.editor=Editor
 ui.home.options=Options
 ui.home.quit=Quitter
@@ -56,3 +57,4 @@ arena.1_ivory_tower=Tour d'ivoire
 arena.2_trench_warfare=Guerre de tranchées
 arena.3_diamond=Diamant
 arena.4_battlefield=Champ de bataille
+arena.5_glass_nightmare=Cauchemar de verre
