--- a/trunk/WordArena/android/assets/i18n/WordArena.properties
+++ b/trunk/WordArena/android/assets/i18n/WordArena.properties
@@ -52,6 +52,7 @@ ui.arena.redrewLetters={0} drew new letters
 ui.arena.roundWinner={0} wins this round
 ui.arena.gameWinner={0} wins the game !
 # Editor screen
+ui.editor.backToHome=Home
 ui.editor.tool.type=Type
 ui.editor.tool.letter=Letter
 ui.editor.tool.power=Power
@@ -70,10 +71,10 @@ ui.editor.player.3=Player 3
 ui.editor.player.4=Player 4
 
 # Arena names
-arena.unnamed=Unnamed Arena
-arena.0_first_assault=First assault
-arena.1_ivory_tower=Ivory tower
-arena.2_trench_warfare= Trench warfare
-arena.3_diamond=Diamond
-arena.4_battlefield=Battlefield
-arena.5_glass_nightmare=Glass nightmare
+arena.title.unnamed=Unnamed Arena
+arena.title.0_first_assault=First assault
+arena.title.1_ivory_tower=Ivory tower
+arena.title.2_trench_warfare= Trench warfare
+arena.title.3_diamond=Diamond
+arena.title.4_battlefield=Battlefield
+arena.title.5_glass_nightmare=Glass nightmare
