--- a/trunk/WordArena/android/assets/i18n/WordArena_fr.properties
+++ b/trunk/WordArena/android/assets/i18n/WordArena_fr.properties
@@ -33,6 +33,7 @@ ui.arena.redrewLetters={0} a tiré de nouvelles lettres
 ui.arena.roundWinner={0} gagne ce  round
 ui.arena.gameWinner={0} remporte la partie !
 # Editor screen
+ui.editor.backToHome=Accueil
 ui.editor.tool.type=Type
 ui.editor.tool.letter=Lettre
 ui.editor.tool.power=Force
@@ -51,10 +52,10 @@ ui.editor.player.3=Joueur 3
 ui.editor.player.4=Joueur 4
 
 # Arena names
-arena.unnamed=Arène sans nom
-arena.0_first_assault=Premier Assaut
-arena.1_ivory_tower=Tour d'ivoire
-arena.2_trench_warfare=Guerre de tranchées
-arena.3_diamond=Diamant
-arena.4_battlefield=Champ de bataille
-arena.5_glass_nightmare=Cauchemar de verre
+arena.title.unnamed=Arène sans nom
+arena.title.0_first_assault=Premier Assaut
+arena.title.1_ivory_tower=Tour d'ivoire
+arena.title.2_trench_warfare=Guerre de tranchées
+arena.title.3_diamond=Diamant
+arena.title.4_battlefield=Champ de bataille
+arena.title.5_glass_nightmare=Cauchemar de verre
